# orion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .secrets.baseline  .taskcluster.yml  .travis.yml  Dockerfile  Makefile  README.md  monorepo.py  pyproject.toml  requirements.txt  service.yaml  setup.py  setup.sh  tox.ini
assets/: overview.html
base/: README.md
services/afl/: Dockerfile  launch-root.sh  launch-worker.sh  pyproject.toml  service.yaml  setup-target.sh  setup.sh
services/afl/patches/: afl-cmin.patch
services/failed-log-ingestor/: Dockerfile  pyproject.toml  service.yaml
services/failed-log-ingestor/src/ingestor/: __init__.py
services/fuzzing-decision/: Dockerfile  MANIFEST.in  README.md  pyproject.toml  service.yaml  setup.cfg  setup.py  tc-admin.py  tox.ini
services/fuzzing-decision/src/fuzzing_decision/common/: __init__.py  cli.py  pool.py  util.py  workflow.py
services/fuzzing-decision/src/fuzzing_decision/decision/: __init__.py  callbacks.py  cli.py  pool.py  providers.py  workflow.py
services/fuzzing-decision/src/fuzzing_decision/pool_launch/: cli.py  launcher.py
services/fuzzing-decision/src/fuzzing_decision/schemas/: machines.yaml  pools.yaml  worker.yaml  workers.yaml
services/fuzzing-decision/tests/: conftest.py  test_launch.py  test_pool.py  test_workflow.py
services/fuzzing-decision/tests/fixtures/: machines.yml
services/fuzzing-decision/tests/fixtures/pools/: expect-task-map2.yml  expect-without-max-run-time.yml  expect1.yml  expect10.yml  expect11.yml  expect12.yml  expect13.yml  expect14.yml  expect15.yml  expect2.yml  expect3.yml  expect4.yml  expect5.yml  expect6.yml  expect7.yml  expect8.yml  expect9.yml  load-cfg.yml  load-map.yml  map1.yml  map2.yml  map3.yml  mixin.yml  pool-without-max-run-time.yml  pool1.yml  pool10.yml  pool11.yml  pool12.yml  pool13.yml  pool15.yml  pool2.yml  pool3.yml  pool4.yml  pool5.yml  pool6.yml  pool7.yml  pool8.yml  pool9.yml  pre-pool.yml  pre.yml
services/grizzly/: Dockerfile  README.md  launch-grizzly-worker.sh  launch-grizzly.sh  pyproject.toml  rwait.py  screenlog-to-cloudwatch.py  service.yaml  setup.cfg  setup.py  setup.sh  tox.ini
services/grizzly-android/: Dockerfile  android-x86_64-llvm-symbolizer  emulator_install.py  kvm.sh  pyproject.toml  service.yaml  setup.cfg  setup.py  setup.sh  tox.ini
services/grizzly-android/recipes/: all.sh  android-ndk.sh  emulator.py  kvm.sh  llvm-symbolizer.sh  requirements.txt  setup.sh
services/grizzly-reduce-monitor/: Dockerfile  pyproject.toml  service.yaml  setup.cfg  setup.py  tox.ini
services/grizzly-reduce-monitor/src/grizzly_reduce_monitor/: common.py  launcher.py  monitor.py  update.py
services/grizzly-reduce-monitor/src/grizzly_reduce_monitor/task_templates/: reduce-android.yaml  reduce-macos.yaml  reduce-windows.yaml  reduce.yaml
services/grizzly/recipes/: cloudwatch.sh  fuzzfetch.sh  fuzzing_tc.sh  grizzly.sh  radamsa.sh  redis.sh  setup.sh
services/nyx/: Dockerfile  build_afl.sh  clang.sh  launch-prv.sh  launch-root.sh  launch-worker.sh  nyx_ipc_manager.py  nyx_utils.py  preload-exit.patch  pyproject.toml  service.yaml  setup.cfg  setup.py  setup.sh  snapshot.sh  tox.ini
services/nyx/custom_mutators/web_service_mutator/: Makefile  web_service_mutator.c
services/nyx/nyx_ipc_manager/: nyx_ipc_manager.py  pyproject.toml  service.yaml  setup.cfg  tox.ini
services/nyx/patches/: afl-cmin.diff  hongfuzz-2b-chunked.diff  increase-map-size.diff  libnyx.diff  nyx.diff
services/nyx/sharedir/: config.ron  fuzz_no_pt.sh  launch.sh  nyx-server.py  stage2.sh
services/nyx/symbol-filter/: README.md  pyproject.toml  service.yaml  tox.ini
services/nyx/symbol-filter/src/symbol_filter/: __init__.py  __main__.py  filter.py
services/nyx/symbol-filter/tests/: test_filter.py
services/orion-builder/: Dockerfile  podman.patch  pyproject.toml  service.yaml  setup.cfg  setup.py  tox.ini
services/orion-builder/src/orion_builder/: build.py  cli.py  combine.py  push.py  stage_deps.py
services/orion-decision/: Dockerfile  MANIFEST.in  README.md  pyproject.toml  service.yaml  setup.cfg  setup.py  tox.ini
services/orion-decision/src/orion_decision/: __init__.py  ci_check.py  ci_matrix.py  ci_scheduler.py  cli.py  cron.py  git.py  orion.py  scheduler.py
services/orion-decision/src/orion_decision/github_test_events/: README.md  webhook.pull_request.open.yaml  webhook.push.offbranch.yaml  webhook.push.unicode.yaml  webhook.push.yaml  webhook.release.yaml  webhook.tag_push.yaml
services/orion-decision/src/orion_decision/schemas/: ci_artifact.yaml  ci_job.yaml  ci_matrix.yaml  ci_secret.yaml
services/orion-decision/src/orion_decision/task_templates/: build.yaml  build_homebrew.yaml  build_msys.yaml  build_msys_exe.yaml  ci-linux.yaml  ci-macos.yaml  ci-windows.yaml  combine.yaml  push.yaml  recipe_test.yaml  test.yaml
services/orion-decision/tests/: conftest.py  test_cimatrix.py  test_cischeduler.py  test_cli.py  test_cron.py  test_gitrepo.py  test_orion.py  test_scheduler.py
services/orion-decision/tests/fixtures/git01/: COMMIT_EDITMSG
services/orion-decision/tests/fixtures/git02/: COMMIT_EDITMSG  index
services/orion-decision/tests/fixtures/matrix01/: expected.yaml  matrix.yaml
services/orion-decision/tests/fixtures/matrix02/: expected.yaml  matrix.yaml
services/orion-decision/tests/fixtures/matrix03/: expected.yaml  matrix.yaml
services/orion-decision/tests/fixtures/matrix04/: expected_off_branch.yaml  expected_on_branch.yaml  expected_release.yaml  matrix.yaml
services/orion-decision/tests/fixtures/matrix05/: expected.yaml  matrix.yaml
services/orion-decision/tests/fixtures/matrix06/: matrix.yaml
services/orion-decision/tests/fixtures/matrix07/: expected.yaml  matrix.yaml
services/orion-decision/tests/fixtures/matrix08/: expected.yaml  matrix.yaml
services/orion-decision/tests/fixtures/services03/: README.md
services/orion-decision/tests/fixtures/services05/: service.yaml
services/orion-decision/tests/fixtures/services12/: Dockerfile  script.sh  service.yaml
(+431 files in other folders)
