[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "*/setup.py",
    "*/tests/*",
    "*/build/*",
    "*/dist/*",
    "*/.tox/*",
    "*/.egg/*",
]

[tool.black]
target-version = ["py36"]

[tool.isort]
known_first_party = "fuzzing_decision"
profile = "black"

[[tool.mypy.overrides]]
module = [
    "responses",
    "slugid",
    "taskcluster.*",
    "tcadmin.*"
]
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "fixme",
    "import-error",
    "subprocess-run-check",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-statements",
]

[tool.pytest.ini_options]
log_level = "DEBUG"
