[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "*/setup.py",
    "*/tests/*",
    "*/build/*",
    "*/dist/*",
    "*/.tox/*",
    "*/.egg/*",
]

[tool.black]
target-version = ["py38"]

[[tool.mypy.overrides]]
module = [
    "setuptools",
    "slugid",
    "taskcluster.*",
    "tcadmin.*"
]
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "fixme",
    "import-error",
    "subprocess-run-check",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-statements",
]

[tool.pytest.ini_options]
log_level = "DEBUG"

[tool.ruff]
ignore = []
line-length = 88
select = [
    # flake8
    "E",
    "F",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # includes yesqa
    "RUF",
]
target-version = "py38"

[tool.ruff.isort]
known-first-party = ["fuzzing_decision"]
