# -*- coding: utf-8 -*-
[metadata]
name = fuzzing-decision
author = Mozilla Security
author_email = fuzzing+taskcluster@mozilla.com
description = Triggers a decision task for Mozilla Firefox build fuzzing
license = MPL 2.0
url = https://github.com/MozillaSecurity/orion
platforms = any

[options]
install_requires =
    taskcluster>=30.0
    python-dateutil
    pyyaml
package_dir =
    = src
packages =
    fuzzing_decision
    fuzzing_decision.common
    fuzzing_decision.decision
    fuzzing_decision.pool_launch
include_package_data = True
zip_safe = False
python_requires = >=3.6

[options.extras_require]
decision =
    tc-admin>=2.6
dev =
    tox

[options.entry_points]
console_scripts =
    fuzzing-decision = fuzzing_decision.decision.cli:main
    fuzzing-pool-launch = fuzzing_decision.pool_launch.cli:main
