# -*- coding: utf-8 -*-
[metadata]
name = emulator_install
author = Mozilla Security
author_email = fuzzing@mozilla.com
description = Android emulator install script
license = MPL 2.0
url = https://github.com/MozillaSecurity/orion
platforms = any

[options]
install_requires =
    fuzzfetch
    xvfbwrapper; sys_platform=='linux'
py_modules =
    emulator_install
python_requires = >=3.6

[options.entry_points]
console_scripts =
    emulator-install = emulator_install:main
