[metadata]
description = Triggers reduction tasks for Grizzly
description-file = README.md
license = MPL 2.0
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = grizzly-reduce-monitor
url = https://github.com/MozillaSecurity/orion

[options]
install_requires =
    grizzly-framework
    taskcluster~=24.2.0
package_dir =
    = src
packages =
    grizzly_reduce_monitor
zip_safe = False
python_requires = >=3.6

[options.entry_points]
console_scripts =
    grizzly-reduce-tc-monitor = grizzly_reduce_monitor.monitor:ReductionMonitor.main
    grizzly-reduce-tc-update = grizzly_reduce_monitor.update:ReductionUpdater.main
    grizzly-reduce-tc-log-private = grizzly_reduce_monitor.launcher:PrivateLogLauncher.main

[options.extras_require]
dev =
    tox
