[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py38"]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = [
    "fasteners",
    "setuptools",
]
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 88
