[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.mypy.overrides]]
module = [
    "fasteners",
    "setuptools",
]
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    # flake8
    "E",
    "F",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # includes yesqa
    "RUF",
]
