# -*- coding: utf-8 -*-
[metadata]
name = rwait
author = Mozilla Security
author_email = fuzzing@mozilla.com
description = Wrapper around waitpid
license = MPL 2.0
url = https://github.com/MozillaSecurity/orion
platforms = any

[options]
install_requires =
    fasteners
py_modules =
    rwait
python_requires = >=3.9

[options.entry_points]
console_scripts =
    rwait = rwait:main
