[metadata]
description = Builder for Orion tasks
license = MPL 2.0
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = orion-builder
url = https://github.com/MozillaSecurity/orion
version = 0.0.1

[options]
install_requires =
    task-boot==0.3.2
package_dir =
    = src
packages =
    orion_builder
zip_safe = False
python_requires = >=3.6

[options.entry_points]
console_scripts =
    build = orion_builder.build:main
    push = orion_builder.push:main
    local-registry = orion_builder.stage_deps:registry_main

[options.extras_require]
dev =
    tox
