[metadata]
description = Scheduler for Orion tasks
license = MPL 2.0
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = orion-decision
url = https://github.com/MozillaSecurity/orion
version = 0.0.1

[options]
install_requires =
    dockerfile-parse==1.1.0
    python-dateutil==2.8.1
    PyYAML==5.3.1
    taskcluster==38.0.6
package_dir =
    = src
packages =
    orion_decision
zip_safe = False
python_requires = >=3.6

[options.entry_points]
console_scripts =
    decision = orion_decision.cli:main

[options.extras_require]
dev =
    tox
