[metadata]
description = Scheduler for Orion tasks
license = MPL 2.0
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = orion-decision
url = https://github.com/MozillaSecurity/orion
version = 0.0.1

[options]
include_package_data = True
install_requires =
    dockerfile-parse
    json-e
    jsonschema>=3.2.0
    python-dateutil
    pyyaml>=5.4
    taskcluster
package_dir =
    = src
packages =
    orion_decision
zip_safe = False
python_requires = >=3.6

[options.entry_points]
console_scripts =
    ci-check = orion_decision.cli:ci_check
    ci-decision = orion_decision.cli:ci_main
    ci-launch = orion_decision.cli:ci_launch
    decision = orion_decision.cli:main
    orion-check = orion_decision.cli:check

[options.extras_require]
dev =
    tox
