# -*- coding: utf-8 -*-
[metadata]
name = nyx_ipc_manager
author = Mozilla Security
author_email = fuzzing@mozilla.com
description = Wrapper for Nyx
license = MPL 2.0
url = https://github.com/MozillaSecurity/orion
platforms = any

[options]
install_requires =
    google-cloud-storage
    psutil
py_modules =
    nyx_ipc_manager
    nyx_utils
python_requires = >=3.8

[options.entry_points]
console_scripts =
    nyx-ipc-manager = nyx_ipc_manager:main
    nyx-ncpu = nyx_utils:ncpu
    nyx-gcs-cat = nyx_utils:gcs_cat
